--- a/templates/user/one_user.html.twig
+++ b/templates/user/one_user.html.twig
@@ -1,6 +1,6 @@
 <html lang="en">
 
-<span> Username: {{ user.getName() }}</span>
+<span> Username: {{ user.getUsername() }}</span>
 <span> Password: {{ user.getPassword() }}</span>
 <span> Email: {{ user.getEmail }}</span>
 </html>
