--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -1,3 +1,3 @@
 <html lang="en">
-    <div>Hello! This should be your dashboard</div>
+    <div>Hello, {{ user.username }}! This should be your dashboard</div>
 </html>
