--- a/templates/workout/workout_list.html.twig
+++ b/templates/workout/workout_list.html.twig
@@ -1,16 +1,20 @@
 <html lang="en">
         {% block javascripts %}
         <script type="text/javascript">
-                const selectedExercises = [];
+                let selectedExercises = [];
                 function addExerciseToWorkout(exerciseName) {
                         const button = document.getElementById(exerciseName);
-                        button.disabled = true;
+                        button.hidden = true;
 
                         const deleteButton = document.getElementById('delete-' + exerciseName);
                         deleteButton.hidden = false;
 
                         selectedExercises.push(exerciseName);
                         console.log(exerciseName);
+                }
+
+                function removeExerciseFromWorkout(exerciseName) {
+                        selectedExercises = selectedExercises.slice(selectedExercises.findIndex(exercise => exercise.name === exerciseName), 1);
                 }
 
                 function isExerciseAddedToWorkout(exerciseName) {
@@ -39,14 +43,14 @@
                                                                 <span> {{ muscle }} </span>
                                                         </div>
                                                 {% endfor %}
-                                                <button id="{{ exercise.name }}" onclick="addExerciseToWorkout('{{ exercise.name }}')" class="cursor-pointer border mt-auto mb-2 shadow"> <span class="font-medium"> Add to workout </span></button>
-                                                <button id="delete-{{ exercise.name }}" class="cursor-pointer border mt-auto mb-2 shadow" hidden> <span class="font-medium"> Remove exercise </span></button>
+                                                <button id="{{ exercise.name }}" onclick="addExerciseToWorkout('{{ exercise.name }}')" class="cursor-pointer bg-blue-500 border mt-auto mb-2 shadow"> <span class="font-medium"> Add to workout </span></button>
+                                                <button id="delete-{{ exercise.name }}" onclick="removeExerciseFromWorkout('{{ exercise.name }}')" class="cursor-pointer bg-red-500 border mt-auto mb-2 shadow" hidden> <span class="font-medium"> Remove exercise </span></button>
                                         </div>
 
                                 {% endfor %}
                         </div>
-                        <div class="flex mt-auto ml-auto bottom-4">
-                                <button class="cursor-pointer border mt-auto mb-2 shadow"> <span class="font-medium"> Submit workout </span></button>
+                        <div class="flex mt-auto ml-auto mb-20 mr-10">
+                                <button class="cursor-pointer border bg-blue-500 mt-auto mb-2 shadow"> <span class="font-medium"> Submit workout </span></button>
                         </div>
                 </div>
         {% endblock %}
