--- a/templates/fragments/sidebar.html.twig
+++ b/templates/fragments/sidebar.html.twig
@@ -5,50 +5,53 @@
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-    <div class="sidebar lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
-        <div class="text-gray-100 text-xl">
-            <div class="p-2.5 mt-1 flex items-center">
-                <i class="bi bi-app-indicator px-2 py-1 rounded-md bg-blue-600"></i>
-                <h1 class="font-bold text-gray-200 text-[15px] ml-3">FitNotes</h1>
-                <i
-                        class="bi bi-x cursor-pointer ml-28 lg:hidden"
-                        onclick="openSidebar()"
-                ></i>
+        <div class="sidebar lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
+            <div class="text-gray-100 text-xl">
+                <div class="p-2.5 mt-1 flex items-center">
+                    <i class="bi bi-app-indicator px-2 py-1 rounded-md bg-blue-600"></i>
+                    <h1 class="font-bold text-gray-200 text-[15px] ml-3">FitNotes</h1>
+                    <i
+                            class="bi bi-x cursor-pointer ml-28 lg:hidden"
+                            onclick="openSidebar()"
+                    ></i>
+                </div>
+                <div class="my-2 bg-gray-600 h-[1px]"></div>
             </div>
-            <div class="my-2 bg-gray-600 h-[1px]"></div>
-        </div>
-        <div class="p-2.5 flex items-center rounded-md px-4 duration-300 cursor-pointer bg-gray-700 text-white">
-            <i class="bi bi-search text-sm"></i>
-            <input
-                    type="text"
-                    placeholder="Search"
-                    class="text-[15px] ml-4 w-full bg-transparent focus:outline-none"
-            />
-        </div>
-        <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-            <i class="bi bi-house-door-fill"></i>
-            <a href="{{ path('home_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Home</a>
-        </div>
-        <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-            <i class="bi bi-bookmark-fill"></i>
-            <a href="{{ path('workout_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Workouts</a>
-        </div>
-        <div class="my-4 bg-gray-600 h-[1px]"></div>
-        <div
-            class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-            <i class="bi bi-chat-left-text-fill"></i>
-            <div class="flex justify-between w-full items-center">
-                <a href="{{ path('progress_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Progress</a>
-                <span class="text-sm rotate-180" id="arrow">
-                <i class="bi bi-chevron-down"></i>
-              </span>
+            <div class="p-2.5 flex items-center rounded-md px-4 duration-300 cursor-pointer bg-gray-700 text-white">
+                <i class="bi bi-search text-sm"></i>
+                <input
+                        type="text"
+                        placeholder="Search"
+                        class="text-[15px] ml-4 w-full bg-transparent focus:outline-none"
+                />
             </div>
-        </div>
-        <div
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-house-door-fill"></i>
+                <a href="{{ path('home_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Home</a>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-bookmark-fill"></i>
+                <a href="{{ path('workout_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Workouts</a>
+            </div>
+            <div class="my-4 bg-gray-600 h-[1px]"></div>
+            <div
                 class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
-            <i class="bi bi-box-arrow-in-right"></i>
-            <a href="{{ path('app_logout') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Logout</a>
+                <i class="bi bi-chat-left-text-fill"></i>
+                <div class="flex justify-between w-full items-center">
+                    <a href="{{ path('progress_page') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Progress</a>
+                    <span class="text-sm rotate-180" id="arrow">
+                    <i class="bi bi-chevron-down"></i>
+                  </span>
+                </div>
+            </div>
+            <div
+                    class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+                <i class="bi bi-box-arrow-in-right"></i>
+                <a href="{{ path('app_logout') }}" class="text-[15px] ml-4 text-gray-200 font-bold sidebar-link">Logout</a>
+            </div>
+            <div class="absolute bottom-0 mb-10 text-white">
+                Hello, {{ app.user.username }}
+            </div>
         </div>
-    </div>
     </body>
 </html>
