Implemented account creation

--- a/templates/fragments/sidebar.html.twig
+++ b/templates/fragments/sidebar.html.twig
@@ -5,7 +5,7 @@
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-        <div class="sidebar lg:left-0 p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
+        <div class="sidebar p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
             <div class="text-gray-100 text-xl">
                 <div class="p-2.5 mt-1 flex items-center">
                     <i class="bi bi-app-indicator px-2 py-1 rounded-md bg-blue-600"></i>
