--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,6 +22,9 @@
             <button type="submit">Sign in</button>
         </form>
     </div>
-
+    <div class="flex flex-col">
+        <span class="font-medium"> Don't have an account? Sign up here! </span>
+        <a href="{{ path('signup_page') }}">Sign up</a>
+    </div>
 {% endblock %}
 
