--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -1,3 +1,6 @@
 <html lang="en">
     <div>Hello, {{ user.username }}! This should be your dashboard</div>
+{#    {% for workout in workouts %}#}
+{#        <span> {{ workout.name }}</span>#}
+{#    {% endfor %}#}
 </html>
