Added API calls for fetching metabolic rate and ideal weight

--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -1,5 +1,6 @@
 <html lang="en">
     <div>Hello, {{ user.username }}! This should be your dashboard</div>
+    <div> Your Basal Metabolic Rate is {{ BMR }}</div>
 {#    {% for workout in workouts %}#}
 {#        <span> {{ workout.name }}</span>#}
 {#    {% endfor %}#}
