--- a/templates/workout/workout_list.html.twig
+++ b/templates/workout/workout_list.html.twig
@@ -33,7 +33,10 @@
                             'Accept': 'application/json',
                             'Content-Type': 'application/json'
                         },
-                        body: JSON.stringify({'selected_exercises': selectedExercises})
+                        body: JSON.stringify({
+                                'selected_exercises': selectedExercises,
+                                'workout_name': document.getElementById('workout_name').value
+                        })
                     })
                         .then(response => response.json())
                         .then(response => console.log(JSON.stringify(response)))
@@ -43,6 +46,8 @@
                 <div class="relative">
                         {% block body %}
                                 <div class="flex flex-col overflow-y-scroll workout-list">
+                                        <label for="workout_name"> Input workout name: </label>
+                                        <input id="workout_name" type="text">
                                         <div class="flex flex-row flex-wrap">
                                                 {% for exercise in exercises %}
                                                         <div class="flex flex-col ml-3 w-56 h-auto items-center justify-center border shadow">
@@ -62,7 +67,6 @@
                                                                                 <span> {{ muscle }} </span>
                                                                         </div>
                                                                 {% endfor %}
-                                                                <input type="hidden" name="selected_exercises[]" id="selected-{{ exercise.name }}">
 
                                                                 <button id="{{ exercise.name }}" onclick="addExerciseToWorkout('{{ exercise|serialize(format = 'json') }}')" type="button" class="cursor-pointer bg-blue-500 border mt-auto mb-2 shadow"> <span class="font-medium"> Add to workout </span></button>
                                                                 <button id="delete-{{ exercise.name }}" onclick="removeExerciseFromWorkout('{{ exercise|serialize(format = 'json') }}')" type="button" class="cursor-pointer bg-red-500 border mt-auto mb-2 shadow" hidden> <span class="font-medium"> Remove exercise </span></button>
