--- a/templates/user/home.html.twig
+++ b/templates/user/home.html.twig
@@ -1,20 +1,47 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+    <script>
+        function redirectToWorkoutForm(workout) {
+            fetch('/create-performed-workout', {
+                method: 'POST',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    'workout': workout
+                })
+            })
+                .then(response => response.json())
+                .then(response => {
+                    console.log(JSON.stringify(response));
+                    // Assuming the response contains the URL for redirection
+                    window.location.href = '/create-performed-workout';
+                })
+        }
+    </script>
+{% endblock %}
 {% block body %}
 <html lang="en">
     <div>Hello, {{ user.username }}! This should be your dashboard</div>
     <div> Your Basal Metabolic Rate is {{ BMR }}</div>
-    <div class="flex flex-row flex-wrap">
-        {% for workout in workouts %}
-            <div class="flex flex-col cursor-pointer border shadow">
-                <span> {{ workout.name }}:</span>
-                <div class="flex flex-row space-x-2">
-                    {% for exercise in workout.exercises %}
-                        <span> {{ exercise.name }}</span>
-                    {% endfor %}
+    <form action="/create-performed-workout" method="post">
+        <div class="flex flex-row flex-wrap">
+            {% for workout in workouts %}
+                <div class="flex flex-col cursor-pointer border shadow">
+                    <span> {{ workout.name }}:</span>
+                    <div class="flex flex-row space-x-2">
+                        {% for exercise in workout.exercises %}
+                            <span> {{ exercise.name }}</span>
+                        {% endfor %}
+                    </div>
+                    <input hidden name="workout" value='{{ workout|serialize(format = 'json') }}'>
+                    <button class="flex cursor-pointer border bg-blue-500 shadow"> Register performed workout </button>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
+            {% endfor %}
+        </div>
+    </form>
+
 </html>
 {% endblock %}
